
   Fix bug 3406177 - DCR instrumented objects are not garbage
   collected. Thanks to Gary Mulder for the report and diagnostics.

   Fix bug 3413171 - TCPProxy broken in The Grinder 3.5. Thanks to
   Lonnie Choset for the report.

   Fix bug 3411728 - helloworld.py doesn't work with DCR
   instrumentation. Thanks to Jeff Vincent for the report.


The Grinder 3.5
---------------

   Fix bug 3008924 - Jython 2.5, assertion error if script has __del__
   method. Thank to Thomas Falkenberg for the report.

   Fix bug 2988755 - NPE in JythonScriptExecutionException
   .tracebackToMessage(). Thanks to Brian Runck for the report.

   Fix bug 2952023 - Cookie.parse should recognise "httponly" (lower
   case). Thanks to amachang for the report and the patch.

   Fix bug 3092275 - Incorrect TPS totals in output log. Thanks to
   Travis Bear for the report.

   Fix bug 3132643 - No statistics to report. This occurred if a clock
   went backwards in time during a test, and prevented the test from
   ever executing successfully again. Thanks to Wallander for the
   report.

   Fix bug 3132940 - Incorrect connect/DNS times when connect timeout
   set. This was due to an error in the fix for 3132940. Thanks to
   Jagdish A for the report, and to Wallander for testing.

   Work around Jython issue 1894900. If the default Jython jar is used
   and it looks like the Jython cachedir has not been configured, then
   create a cache directory in lib.

   Fulfil feature request 3324241 - Upgrade to PicoContainer 2.13.6.
   Thanks to Alexis Bezverkhyy the request.

   Fix bug 3287570 - Memory leak in DCR instrumentation if same target
   was recorded multiple times using the same Test. Thanks to John
   (crystalstone) for the report.

   Support Jython 2.5.2.

   Fix bug 2992248 - DCR instrumentation of Java methods.
   Instrumentation of Java methods from Jython scripts has been
   improved. Multiple references from a script to an instrumented